--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -108,6 +108,7 @@
      .r-container {
          width: auto;
          padding: 1rem;
+         opacity: 95%;
      }
 
      .r-button button {
