--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
     font-family: 'Fredoka', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Raleway', sans-serif;
+    overflow: hidden;
 }
